--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,7 +3,7 @@
 /* ---------- FONDO ANIMADO NEÓN ---------- */
 body {
     font-family: 'Space Grotesk', sans-serif;
-    background: radial-gradient(circle at top left, #ff4d8f, #6536ff, #00d4ff);
+    background: radial-gradient(circle at top left, #9733b1, #eb2c2c, #00d4ff);
     background-size: 400% 400%;
     animation: colorFlow 12s ease infinite;
     display: flex;
